tests/errors/compiler/no_enum_in_type/no_enum_in_type_1.c
enum Color : int
{
	r = 5,
	g,
	b = 2
};

int main()
{
	Color num;
	return 0;
}